This file documents the revision history for the SNClient+ agent.

0.14     Tue Dec 12 19:57:45 CET 2023
         - check_service (linux): add rss/vms/cpu/task metric and remove generic mem metric
         - check_service: add more metrics
         - add cli inventory mode
         - add duration / age / date / human number macro post processors
         - add support for %{} macros and $() as well
         - add timeout to check_drivesize for hanging mounts
         - add check_cpu_utilization
         - add check_mount
         - add check_temperature
         - add check_kernel_stats
         - add fmt macro operator to formt numbers
         - add automatic retries to wmi querys
         - add /api/v1/admin/reload rest endpoint to initialize config changes
         - add /api/v1/admin/certs/replace rest endpoint to replace certificates
         - support different allowed hosts settings for each web handler
         - fix cpu check on osx not returning metrics

0.13     Thu Nov 23 22:20:21 CET 2023
         - drop privileges when running node exporter
         - update node exporter to 1.7.0
         - add node exporter to osx packages
         - add check_load plugin
         - improve docs and help pages
         - add folder size support to check_files (#38)
         - add basic promethes metrics
         - check_eventlog: finish implementing
         - fix reading empty config files (#58)
         - fix packaging for debian <= 12

0.12     Tue Nov  7 23:52:33 CET 2023
         - add built-in check_http / check_tcp / check_dns
         - add check_omd check
         - msi windows installer:
           - do not change windows service during updates

0.11     Fri Oct 27 20:27:21 CEST 2023
         - support filter regex syntax: attr ~~ /value/
         - return error if using unknown check arguments
         - add (prometheus) node/windows exporter and custom exporters
         - fix check_drivesize showing wrong disk on linux