@@ -1,5 +1,8 @@
 This file documents the revision history for the SNClient+ agent.
 
+next:
+         - fix check_temperature default thresholds
+
 0.14     Tue Dec 12 19:57:45 CET 2023
          - check_service (linux): add rss/vms/cpu/task metric and remove generic mem metric
          - check_service: add more metrics
